--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h1, h2, p {
     margin-bottom: 20px;
 }
 
-body {
+body-container {
   font-family: Arial, sans-serif;
   background-color: #111;
   color: #fff;
@@ -69,5 +69,6 @@ body {
   border-radius: 5px;
   padding: 2px 5px;
 }
+
 
 
